; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_global_hold_socket.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_global_hold_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.nn_sock = type { i32 }

@self = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_global_hold_socket(%struct.nn_sock** %0, i32 %1) #0 {
  %3 = alloca %struct.nn_sock**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.nn_sock** %0, %struct.nn_sock*** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @nn_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  %7 = load %struct.nn_sock**, %struct.nn_sock*** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @nn_global_hold_socket_locked(%struct.nn_sock** %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = call i32 @nn_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  %11 = load i32, i32* %5, align 4
  ret i32 %11
}

declare dso_local i32 @nn_mutex_lock(i32*) #1

declare dso_local i32 @nn_global_hold_socket_locked(%struct.nn_sock**, i32) #1

declare dso_local i32 @nn_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
